# FedExShippingRateProject

./: .env.example  FedExLGShiippingAgent.ipynb  FedExLGShiippingAgentBkup.ipynb  load_to_postgres.py  parse_pdf.py  pyproject.toml  shippingrate_server.py
config/: shipping_rate_lookup.md
