[project]
name = "fedex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.1.0",
    "pdf2image>=1.17.0",
    "pypdf>=6.1.1",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "mlflow>=3.4.0",
    "jupyter>=1.1.1",
    "langgraph>=0.6.8",
    "ipython>=9.6.0",
    "nest-asyncio>=1.6.0",
    "grandalf>=0.8",
    "langchain-mcp-adapters>=0.1.11",
    "mcp>=1.16.0",
    "fastmcp>=2.12.4",
]
